--- a/index.html
+++ b/index.html
@@ -16,153 +16,195 @@
   </head>
   <body>
     <header>
-      <!-- навігаційна панель -->
-      <nav>
-        <a href="./index.html" class="logo navy-blue"
-          ><span class="iris">Web</span>Studio</a
-        >
-        <ul class="reset">
-          <li>
-            <a href="./index.html" class="my-link body-medium-text navy-blue"
-              >Studio</a
+      <div class="container">
+        <div class="flex my-heder">
+          <!-- навігаційна панель -->
+          <nav class="flex my-nav">
+            <a href="./index.html" class="logo navy-blue"
+              ><span class="iris">Web</span>Studio</a
             >
-          </li>
-          <li>
-            <a
-              href="./portfolio.html"
-              class="my-link body-medium-text navy-blue"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="" class="my-link body-medium-text navy-blue">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="reset">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="address-link body-text slate"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link body-text slate"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <ul class="flex my-links">
+              <li>
+                <a
+                  href="./index.html"
+                  class="my-link body-medium-text navy-blue"
+                  >Studio</a
+                >
+              </li>
+              <li>
+                <a
+                  href="./portfolio.html"
+                  class="my-link body-medium-text navy-blue"
+                  >Portfolio</a
+                >
+              </li>
+              <li>
+                <a href="" class="my-link body-medium-text navy-blue"
+                  >Contacts</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <address>
+            <ul class="flex my-address">
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address-link body-text slate"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="address-link body-text slate"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </header>
     <main>
+      <!-- головний заклик -->
       <section class="bg-navy-blue">
-        <!-- головний заклик -->
-        <h1 class="header-1 snow">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button button-text">
-          Order Service
-        </button>
+        <div class="container">
+          <div class="flex my-hero">
+            <h1 class="header-1 snow my-hero-text">
+              Effective Solutions for Your Business
+            </h1>
+            <button type="button" class="main-button button-text">
+              Order Service
+            </button>
+          </div>
+        </div>
       </section>
+      <!-- наші переваги -->
       <section>
-        <!-- наші переваги -->
-        <h2 class="header-2 navy-blue">Advantages</h2>
-        <ul class="reset">
-          <li>
-            <h3 class="header-3 navy-blue">Strategy</h3>
-            <p class="body-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="header-3 navy-blue">Punctuality</h3>
-            <p class="body-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="header-3 navy-blue">Diligence</h3>
-            <p class="body-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="header-3 navy-blue">Technologies</h3>
-            <p class="body-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <div class="my-advantages">
+            <h2 style="display: none">Advantages</h2>
+            <ul class="flex my-advantages-list">
+              <li>
+                <h3 class="header-3 navy-blue">Strategy</h3>
+                <p class="body-text">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li>
+                <h3 class="header-3 navy-blue">Punctuality</h3>
+                <p class="body-text">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li>
+                <h3 class="header-3 navy-blue">Diligence</h3>
+                <p class="body-text">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li>
+                <h3 class="header-3 navy-blue">Technologies</h3>
+                <p class="body-text">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
+      <!-- що ми робимо -->
       <section>
-        <!-- що ми робимо -->
-        <h2 class="header-2 navy-blue">What are we doing</h2>
-        <ul class="reset">
-          <li>
-            <img src="./images/computer.jpg" alt="Computer" width="360" />
-          </li>
-          <li>
-            <img src="./images/phonescreen.jpg" alt="Phonescreen" width="360" />
-          </li>
-          <li><img src="./images/phone.jpg" alt="Phone" width="360" /></li>
-        </ul>
+        <div class="container">
+          <div class="my-products">
+            <h2 class="header-2 navy-blue">What are we doing</h2>
+            <ul class="flex my-products-list">
+              <li>
+                <img src="./images/computer.jpg" alt="Computer" width="360" />
+              </li>
+              <li>
+                <img
+                  src="./images/phonescreen.jpg"
+                  alt="Phonescreen"
+                  width="360"
+                />
+              </li>
+              <li><img src="./images/phone.jpg" alt="Phone" width="360" /></li>
+            </ul>
+          </div>
+        </div>
       </section>
+      <!-- наша команда -->
       <section class="bg-cloud">
-        <!-- наша команда -->
-        <h2 class="header-2 navy-blue">Our Team</h2>
-        <ul class="reset">
-          <li>
-            <img
-              src="./images/our_team/mark_guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="header-3 navy-blue">Mark Guerrero</h3>
-            <p class="body-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/our_team/tom_ford.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
-            <h3 class="header-3 navy-blue">Tom Ford</h3>
-            <p class="body-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/our_team/camila_garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="header-3 navy-blue">Camila Garcia</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/our_team/daniel_wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="header-3 navy-blue">Daniel Wilson</h3>
-            <p class="body-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <div class="my-team">
+            <h2 class="header-2 navy-blue">Our Team</h2>
+            <ul class="flex my-team-list">
+              <li class="my-team-card bg-snow">
+                <img
+                  src="./images/our_team/mark_guerrero.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                />
+                <div class="my-team-card-caption">
+                  <h3 class="header-3 navy-blue">Mark Guerrero</h3>
+                  <p class="body-text">Product Designer</p>
+                </div>
+              </li>
+              <li class="my-team-card bg-snow">
+                <img
+                  src="./images/our_team/tom_ford.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                />
+                <div class="my-team-card-caption">
+                  <h3 class="header-3 navy-blue">Tom Ford</h3>
+                  <p class="body-text">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="my-team-card bg-snow">
+                <img
+                  src="./images/our_team/camila_garcia.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                />
+                <div class="my-team-card-caption">
+                  <h3 class="header-3 navy-blue">Camila Garcia</h3>
+                  <p class="body-text">Marketing</p>
+                </div>
+              </li>
+              <li class="my-team-card bg-snow">
+                <img
+                  src="./images/our_team/daniel_wilson.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                />
+                <div class="my-team-card-caption">
+                  <h3 class="header-3 navy-blue">Daniel Wilson</h3>
+                  <p class="body-text">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
+    <!--Підвал-->
     <footer class="bg-navy-blue">
-      <!--Підвал-->
-      <a href="./index.html" class="logo cloud"
-        ><span class="iris">Web</span>Studio</a
-      >
-      <p class="body-text cornflower">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="flex my-footer">
+          <a href="./index.html" class="logo cloud"
+            ><span class="iris">Web</span>Studio</a
+          >
+          <p class="my-footer-text body-text cornflower">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
