--- a/portfolio.html
+++ b/portfolio.html
@@ -16,177 +16,195 @@
   </head>
   <body>
     <header>
-      <!-- навігаційна панель -->
-      <nav>
-        <a href="./index.html" class="logo navy-blue"
-          ><span class="iris">Web</span>Studio</a
-        >
-        <ul class="reset">
-          <li class="nav-link">
-            <a href="./index.html" class="my-link body-medium-text navy-blue"
-              >Studio</a
+      <div class="container">
+        <div class="flex my-heder">
+          <!-- навігаційна панель -->
+          <nav class="flex my-nav">
+            <a href="./index.html" class="logo navy-blue"
+              ><span class="iris">Web</span>Studio</a
             >
-          </li>
-          <li>
-            <a
-              href="./portfolio.html"
-              class="my-link body-medium-text navy-blue"
-              >Portfolio</a
-            >
-          </li>
-          <li>
-            <a href="" class="my-link body-medium-text navy-blue">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="reset">
-          <li>
-            <a
-              href="mailto:info@devstudio.com"
-              class="address-link body-text slate"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address-link body-text slate"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <ul class="flex my-links">
+              <li>
+                <a
+                  href="./index.html"
+                  class="my-link body-medium-text navy-blue"
+                  >Studio</a
+                >
+              </li>
+              <li>
+                <a
+                  href="./portfolio.html"
+                  class="my-link body-medium-text navy-blue"
+                  >Portfolio</a
+                >
+              </li>
+              <li>
+                <a href="" class="my-link body-medium-text navy-blue"
+                  >Contacts</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <address>
+            <ul class="flex my-address">
+              <li>
+                <a
+                  href="mailto:info@devstudio.com"
+                  class="address-link body-text slate"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="address-link body-text slate"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </header>
     <main>
       <section>
-        <!--Filters-->
-        <ul class="reset">
-          <li>
-            <button type="button" class="filter-button button-text">All</button>
-          </li>
-          <li>
-            <button type="button" class="filter-button button-text">
-              Web Site
-            </button>
-          </li>
-          <li>
-            <button type="button" class="filter-button button-text">App</button>
-          </li>
-          <li>
-            <button type="button" class="filter-button button-text">
-              Design
-            </button>
-          </li>
-          <li>
-            <button type="button" class="filter-button button-text">
-              Marketing
-            </button>
-          </li>
-        </ul>
+        <div class="container">
+          <!--Filters-->
+          <ul class="reset">
+            <li>
+              <button type="button" class="filter-button button-text">
+                All
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter-button button-text">
+                Web Site
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter-button button-text">
+                App
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter-button button-text">
+                Design
+              </button>
+            </li>
+            <li>
+              <button type="button" class="filter-button button-text">
+                Marketing
+              </button>
+            </li>
+          </ul>
+        </div>
       </section>
       <section>
-        <h2>Portfolio</h2>
-        <!--Portfolio-->
-        <!--Row 1-->
-        <ul class="reset">
-          <li>
-            <img
-              src="./images/portfolio/banking_app.jpg"
-              alt="Banking application"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Banking App Interface Concept</h3>
-            <p class="body-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/cashless.jpg"
-              alt="Mobile phone"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Cashless Payment</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/meditaion_app.jpg"
-              alt="Laptop and phone"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Meditaion App</h3>
-            <p class="body-text">App</p>
-          </li>
-        </ul>
-        <!--Row 2-->
-        <ul class="reset">
-          <li>
-            <img
-              src="./images/portfolio/taxi.jpg"
-              alt="Man behind the wheel"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Taxi Service</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/screen_illustrations.jpg"
-              alt="Mobile phone screen"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Screen Illustrations</h3>
-            <p class="body-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/courses.jpg"
-              alt="Happy girl"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Online Courses</h3>
-            <p class="body-text">Marketing</p>
-          </li>
-        </ul>
-        <!--Row 3-->
-        <ul class="reset">
-          <li>
-            <img
-              src="./images/portfolio/insta_stories.jpg"
-              alt="Examples of Instagram stories"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Instagram Stories Concept</h3>
-            <p class="body-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/food.jpg"
-              alt="Plant food"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Organic Food</h3>
-            <p class="body-text">Web Site</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/coffee.jpg"
-              alt="We are preparing cappuccino"
-              width="360"
-            />
-            <h3 class="header-3 navy-blue">Fresh Coffee</h3>
-            <p class="body-text">Web Site</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Portfolio</h2>
+          <!--Portfolio-->
+          <!--Row 1-->
+          <ul class="reset">
+            <li>
+              <img
+                src="./images/portfolio/banking_app.jpg"
+                alt="Banking application"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Banking App Interface Concept</h3>
+              <p class="body-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/cashless.jpg"
+                alt="Mobile phone"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Cashless Payment</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/meditaion_app.jpg"
+                alt="Laptop and phone"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Meditaion App</h3>
+              <p class="body-text">App</p>
+            </li>
+          </ul>
+          <!--Row 2-->
+          <ul class="reset">
+            <li>
+              <img
+                src="./images/portfolio/taxi.jpg"
+                alt="Man behind the wheel"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Taxi Service</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/screen_illustrations.jpg"
+                alt="Mobile phone screen"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Screen Illustrations</h3>
+              <p class="body-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/courses.jpg"
+                alt="Happy girl"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Online Courses</h3>
+              <p class="body-text">Marketing</p>
+            </li>
+          </ul>
+          <!--Row 3-->
+          <ul class="reset">
+            <li>
+              <img
+                src="./images/portfolio/insta_stories.jpg"
+                alt="Examples of Instagram stories"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Instagram Stories Concept</h3>
+              <p class="body-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/food.jpg"
+                alt="Plant food"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Organic Food</h3>
+              <p class="body-text">Web Site</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio/coffee.jpg"
+                alt="We are preparing cappuccino"
+                width="360"
+              />
+              <h3 class="header-3 navy-blue">Fresh Coffee</h3>
+              <p class="body-text">Web Site</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="bg-navy-blue">
-      <!--Підвал-->
-      <a href="./index.html" class="logo cloud"
-        ><span class="iris">Web</span>Studio</a
-      >
-      <p class="body-text cornflower">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <!--Підвал-->
+        <a href="./index.html" class="logo cloud"
+          ><span class="iris">Web</span>Studio</a
+        >
+        <p class="body-text cornflower">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
