--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <title>Studio</title>
   </head>
   <body>
-    <header>
+    <header class="full-width">
       <div class="container">
-        <div class="flex my-heder">
+        <div class="flex my-header">
           <!-- навігаційна панель -->
           <nav class="flex my-nav">
             <a href="./index.html" class="logo navy-blue"
@@ -66,7 +66,7 @@
     </header>
     <main>
       <!-- головний заклик -->
-      <section class="bg-navy-blue">
+      <section class="bg-navy-blue full-width">
         <div class="container">
           <div class="flex my-hero">
             <h1 class="header-1 snow my-hero-text">
@@ -79,7 +79,7 @@
         </div>
       </section>
       <!-- наші переваги -->
-      <section>
+      <section class="full-width">
         <div class="container">
           <div class="my-advantages">
             <h2 style="display: none">Advantages</h2>
@@ -117,7 +117,7 @@
         </div>
       </section>
       <!-- що ми робимо -->
-      <section>
+      <section class="full-width">
         <div class="container">
           <div class="my-products">
             <h2 class="header-2 navy-blue">What are we doing</h2>
@@ -138,7 +138,7 @@
         </div>
       </section>
       <!-- наша команда -->
-      <section class="bg-cloud">
+      <section class="bg-cloud full-width">
         <div class="container">
           <div class="my-team">
             <h2 class="header-2 navy-blue">Our Team</h2>
@@ -193,7 +193,7 @@
       </section>
     </main>
     <!--Підвал-->
-    <footer class="bg-navy-blue">
+    <footer class="bg-navy-blue full-width">
       <div class="container">
         <div class="flex my-footer">
           <a href="./index.html" class="logo cloud"
