--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
+    <header class="full-width">
       <div class="container">
-        <div class="flex my-heder">
+        <div class="flex my-header">
           <!-- навігаційна панель -->
           <nav class="flex my-nav">
             <a href="./index.html" class="logo navy-blue"
@@ -194,16 +194,17 @@
         </div>
       </section>
     </main>
-    <footer class="bg-navy-blue">
+    <footer class="bg-navy-blue full-width">
       <div class="container">
-        <!--Підвал-->
-        <a href="./index.html" class="logo cloud"
-          ><span class="iris">Web</span>Studio</a
-        >
-        <p class="body-text cornflower">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="flex my-footer">
+          <a href="./index.html" class="logo cloud"
+            ><span class="iris">Web</span>Studio</a
+          >
+          <p class="my-footer-text body-text cornflower">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </div>
     </footer>
   </body>
