--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
     </header>
     <main>
       <!--Filters-->
-      <section class="full-width my-filtres">
+      <div class="full-width my-filtres">
         <div class="container">
           <ul class="flex my-filtres-list">
             <li class="my-filtres-item">
@@ -96,7 +96,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </div>
       <!--Portfolio-->
       <section class="full-width my-portfolio">
         <div class="container">
