--- a/portfolio.html
+++ b/portfolio.html
@@ -15,30 +15,31 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <!-- шапка і навігація -->
     <header class="full-width">
       <div class="container">
-        <div class="flex my-header">
+        <div class="my-header">
           <!-- навігаційна панель -->
-          <nav class="flex my-nav">
+          <nav class="my-nav">
             <a href="./index.html" class="logo navy-blue"
               ><span class="iris">Web</span>Studio</a
             >
-            <ul class="flex my-links">
-              <li>
+            <ul class="my-link-list">
+              <li class="my-link-item">
                 <a
                   href="./index.html"
                   class="my-link body-medium-text navy-blue"
                   >Studio</a
                 >
               </li>
-              <li>
+              <li class="my-link-item">
                 <a
                   href="./portfolio.html"
                   class="my-link body-medium-text navy-blue"
                   >Portfolio</a
                 >
               </li>
-              <li>
+              <li class="my-link-item">
                 <a href="" class="my-link body-medium-text navy-blue"
                   >Contacts</a
                 >
@@ -46,16 +47,18 @@
             </ul>
           </nav>
           <address>
-            <ul class="flex my-address">
-              <li>
+            <ul class="my-address-list">
+              <li class="my-address-item">
                 <a
                   href="mailto:info@devstudio.com"
-                  class="address-link body-text slate"
+                  class="my-address-link body-text slate"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
-                <a href="tel:+110001111111" class="address-link body-text slate"
+              <li class="my-address-item">
+                <a
+                  href="tel:+110001111111"
+                  class="my-address-link body-text slate"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -68,7 +71,7 @@
       <!--Filters-->
       <div class="full-width my-filtres">
         <div class="container">
-          <ul class="flex my-filtres-list">
+          <ul class="my-filtres-list">
             <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
                 All
@@ -100,8 +103,8 @@
       <!--Portfolio-->
       <section class="full-width my-portfolio">
         <div class="container">
-          <h1 class="hide">Portfolio</h1>
-          <ul class="flex my-portfolio-list">
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="my-portfolio-list">
             <!--Row 1-->
             <li class="my-portfolio-item">
               <img
@@ -212,7 +215,7 @@
     </main>
     <footer class="bg-navy-blue full-width">
       <div class="container">
-        <div class="flex my-footer">
+        <div class="my-footer">
           <a href="./index.html" class="logo cloud"
             ><span class="iris">Web</span>Studio</a
           >
