--- a/index.html
+++ b/index.html
@@ -15,30 +15,31 @@
     <title>Studio</title>
   </head>
   <body>
+    <!-- шапка і навігація -->
     <header class="full-width">
       <div class="container">
-        <div class="flex my-header">
+        <div class="my-header">
           <!-- навігаційна панель -->
-          <nav class="flex my-nav">
+          <nav class="my-nav">
             <a href="./index.html" class="logo navy-blue"
               ><span class="iris">Web</span>Studio</a
             >
-            <ul class="flex my-links">
-              <li>
+            <ul class="my-link-list">
+              <li class="my-link-item">
                 <a
                   href="./index.html"
                   class="my-link body-medium-text navy-blue"
                   >Studio</a
                 >
               </li>
-              <li>
+              <li class="my-link-item">
                 <a
                   href="./portfolio.html"
                   class="my-link body-medium-text navy-blue"
                   >Portfolio</a
                 >
               </li>
-              <li>
+              <li class="my-link-item">
                 <a href="" class="my-link body-medium-text navy-blue"
                   >Contacts</a
                 >
@@ -46,16 +47,18 @@
             </ul>
           </nav>
           <address>
-            <ul class="flex my-address">
-              <li>
+            <ul class="my-address-list">
+              <li class="my-address-item">
                 <a
                   href="mailto:info@devstudio.com"
-                  class="address-link body-text slate"
+                  class="my-address-link body-text slate"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
-                <a href="tel:+110001111111" class="address-link body-text slate"
+              <li class="my-address-item">
+                <a
+                  href="tel:+110001111111"
+                  class="my-address-link body-text slate"
                   >+11 (000) 111-11-11</a
                 >
               </li>
@@ -68,7 +71,7 @@
       <!-- головний заклик -->
       <section class="bg-navy-blue full-width">
         <div class="container">
-          <div class="flex my-hero">
+          <div class="my-hero">
             <h1 class="header-1 snow my-hero-text">
               Effective Solutions for Your Business
             </h1>
@@ -81,30 +84,30 @@
       <!-- наші переваги -->
       <section class="full-width my-advantages">
         <div class="container">
-          <h2 class="hide">Advantages</h2>
-          <ul class="flex my-advantages-list">
-            <li>
+          <h2 class="visually-hidden">Advantages</h2>
+          <ul class="my-advantages-list">
+            <li class="my-advantages-item">
               <h3 class="header-3 navy-blue">Strategy</h3>
               <p class="body-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="my-advantages-item">
               <h3 class="header-3 navy-blue">Punctuality</h3>
               <p class="body-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="my-advantages-item">
               <h3 class="header-3 navy-blue">Diligence</h3>
               <p class="body-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="my-advantages-item">
               <h3 class="header-3 navy-blue">Technologies</h3>
               <p class="body-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -120,18 +123,20 @@
           <h2 class="header-2 navy-blue my-products-title">
             What are we doing
           </h2>
-          <ul class="flex my-products-list">
-            <li>
+          <ul class="my-products-list">
+            <li class="my-products-item">
               <img src="./images/computer.jpg" alt="Computer" width="360" />
             </li>
-            <li>
+            <li class="my-products-item">
               <img
                 src="./images/phonescreen.jpg"
                 alt="Phonescreen"
                 width="360"
               />
             </li>
-            <li><img src="./images/phone.jpg" alt="Phone" width="360" /></li>
+            <li class="my-products-item">
+              <img src="./images/phone.jpg" alt="Phone" width="360" />
+            </li>
           </ul>
         </div>
       </section>
@@ -139,7 +144,7 @@
       <section class="bg-cloud full-width my-team">
         <div class="container">
           <h2 class="header-2 navy-blue my-team-title">Our Team</h2>
-          <ul class="flex my-team-list">
+          <ul class="my-team-list">
             <li class="my-team-card bg-snow">
               <img
                 src="./images/our_team/mark_guerrero.jpg"
@@ -188,10 +193,10 @@
         </div>
       </section>
     </main>
-    <!--Підвал-->
+    <!-- підвал -->
     <footer class="bg-navy-blue full-width">
       <div class="container">
-        <div class="flex my-footer">
+        <div class="my-footer">
           <a href="./index.html" class="logo cloud"
             ><span class="iris">Web</span>Studio</a
           >
